--- a/scr/style.css
+++ b/scr/style.css
@@ -3,6 +3,48 @@
     padding: 0px;
     box-sizing: border-box;
 }
+#logo{
+    
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-height: fit-content;
+    align-items: center;
+    padding-top: 5px;
+    padding-left: 6%;
+    padding-right: 7%;
+    background: radial-gradient(#fff,rgb(240, 227, 236));
+    
+}
+#logolist{
+    display: inline;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    list-style: none;
+    
+   
+}
+#logolist li{
+    display: inline-block;
+    padding: 15px 40px;
+}
+#logolist li a{
+    color: black;
+    text-decoration: none;
+   
+}
+#logolist li a:hover{
+    color:red;
+    letter-spacing: 2px;
+   
+}
+#logo img{
+height: 2cm;
+width: 3cm;
+   cursor: pointer;
+   padding-bottom: 5px;
+}
 #home{
     display: flex;
     height: fit-content;
